Update build.gralde and .gitingore to fix source issue.

--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,10 @@ jar {
 wrapper {
     gradleVersion = '5.0'
 }
+sourceSets {
+    main {
+        java {
+            srcDirs = ["src"]
+        }
+    }
+}
