--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2019-Destination-Deep-Space</name>
-	<comment>Project 2019-Destination-Deep-Space created by Buildship.</comment>
+	<name>2019-Destination-Deep-Space-Updated</name>
+	<comment>Project 2019-Destination-Deep-Space-Updated created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -20,4 +20,15 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1632059011517</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
